crates/toml_edit/tests/snapshots/invalid/float/exp-double-e-01.stderr
TOML parse error at line 1, column 21
  |
1 | exp-double-e-01 = 1ee2
  |                     ^
invalid exponent, expected digits
